--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
